--- a/Poc_task/Views/web.config
+++ b/Poc_task/Views/web.config
@@ -39,4 +39,7 @@
       </assemblies>
     </compilation>
   </system.web>
+  <connectionStrings>
+    <add name="con" connectionString="Data Source=DESKTOP-LO99LCF\SQLEXPRESS;Initial Catalog=EmployeeDB;Integrated Security=True " providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
