--- a/Poc_task/Poc_task.csproj
+++ b/Poc_task/Poc_task.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\EmployeeDBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +132,13 @@
     <Content Include="Views\Default\Index.cshtml" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+    <Content Include="Views\Default\PostUsingBinding.cshtml" />
+    <Content Include="Views\NewFolder1\Bootstrap.cshtml" />
+    <Content Include="Views\Default\ViewRecords.cshtml" />
+    <Content Include="Views\Default\DisplayRecords.cshtml" />
+    <Content Include="Views\Default\CreateRecord.cshtml" />
+    <Content Include="Views\Default\DeleteRecord.cshtml" />
+    <Content Include="Views\Default\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -139,8 +148,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
-    <Folder Include="Views\NewFolder1\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
