--- a/Poc_task/Web.config
+++ b/Poc_task/Web.config
@@ -40,4 +40,18 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
+
+  <connectionStrings>
+    <add name="dbcs" connectionString="Data Source=DESKTOP-LO99LCF\SQLEXPRESS;Initial Catalog=EmployeeDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+
+  
+  
+  
+  
+  
+  
+  
 </configuration>
+
